# graphql-orm

./: CHANGELOG.md  Cargo.toml  MIGRATION.md  README.md  compose.yaml
crates/graphql-orm/: Cargo.toml  README.md
crates/graphql-orm-macros/: Cargo.toml  README.md
crates/graphql-orm-macros/docs/: HOST_INTEGRATION.md
crates/graphql-orm-macros/fixtures/full-stack/: Cargo.toml
crates/graphql-orm-macros/fixtures/full-stack/src/: lib.rs
crates/graphql-orm-macros/fixtures/postgres-smoke/: Cargo.toml
crates/graphql-orm-macros/fixtures/postgres-smoke/src/: lib.rs
crates/graphql-orm-macros/src/: backend.rs  entity.rs  lib.rs  mutation_result.rs  naming.rs  operations.rs  relations.rs  repository.rs  schema_roots.rs
crates/graphql-orm/docs/: BACKUP.md  MSSQL.md
crates/graphql-orm/examples/: mssql_readonly.rs
crates/graphql-orm/src/: db.rs  lib.rs  prelude.rs  types.rs
crates/graphql-orm/src/db/: mssql.rs
crates/graphql-orm/src/graphql/: auth.rs  auth_agql.rs  errors.rs  filters.rs  loaders.rs  mod.rs  orm.rs  pagination.rs  structural_auth.rs
crates/graphql-orm/src/graphql/orm/: backend.rs  backup.rs  core.rs  dialect.rs  execution.rs  lease.rs  migrations.rs  mod.rs  query.rs  rls.rs  runtime_query.rs  runtime_record.rs  runtime_relation.rs  runtime_schema.rs  schema_manager.rs  schema_module.rs  search.rs  spatial.rs
crates/graphql-orm/tests/: app_repository_helpers.rs  append_only.rs  append_only_ui.rs  auth_bridge.rs  authorization_mode.rs  backend_coexistence_fixture.rs  backend_dependency_isolation.rs  backend_selection_ui.rs  backup_metadata.rs  backup_roundtrip.rs  bidirectional_join_relations.rs  bidirectional_keyset_input.rs  binary_keys.rs  bounded_mutation_sentinels.rs  composite_mutations.rs  composite_primary_keys.rs  composite_relations.rs  composite_relations_ui.rs  composite_write_unavailable_ui.rs  conditional_index_ui.rs  conditional_indexes.rs  conditional_update.rs  contract_gaps.rs  entity_policy.rs  federation_operation_roots.rs  federation_operation_roots_mssql.rs  fenced_leases.rs  field_safety.rs  full_text_search.rs  generated_mutation_exposure.rs  generated_mutation_exposure_postgres_ui.rs  generated_mutation_exposure_ui.rs  generated_subscriptions.rs  generated_upserts.rs  graphql_case_features.rs  graphql_naming.rs  json_fields.rs  keyset_pagination.rs  legacy_migration_history.rs  lifecycle_cleanup_and_deferred.rs  (+55 more)
crates/graphql-orm/tests/fixtures/backend-coexistence/: Cargo.toml
crates/graphql-orm/tests/fixtures/backend-coexistence/auth-service/: Cargo.toml
crates/graphql-orm/tests/fixtures/backend-coexistence/auth-service/src/: lib.rs
crates/graphql-orm/tests/fixtures/backend-coexistence/jim-service/: Cargo.toml
crates/graphql-orm/tests/fixtures/backend-coexistence/jim-service/src/: lib.rs
crates/graphql-orm/tests/support/: federation_sdl.rs
crates/graphql-orm/tests/ui/: append_only_update_unavailable.rs  append_only_update_unavailable.stderr  append_only_upsert.rs  append_only_upsert.stderr  composite_mutation_generated_key.rs  composite_mutation_generated_key.stderr  composite_mutation_nullable_key.rs  composite_mutation_nullable_key.stderr  composite_mutations_sqlx_free.rs  composite_relation_arity_mismatch.rs  composite_relation_arity_mismatch.stderr  composite_relation_unknown_source.rs  composite_relation_unknown_source.stderr  composite_write_helper_unavailable.rs  composite_write_helper_unavailable.stderr  conditional_index_non_string_predicate.rs  conditional_index_non_string_predicate.stderr  conditional_index_unknown_field.rs  conditional_index_unknown_field.stderr  generated_mutations_allowlist_missing.rs  generated_mutations_allowlist_missing.stderr  generated_mutations_denylist_missing.rs  generated_mutations_denylist_missing.stderr  generated_mutations_invalid_mode.rs  generated_mutations_invalid_mode.stderr  generated_mutations_postgres_none.rs  generated_mutations_unknown_entity.rs  generated_mutations_unknown_entity.stderr  generated_mutations_wrong_list_mode.rs  generated_mutations_wrong_list_mode.stderr  mssql_composite_mutation_unavailable.rs  mssql_composite_mutation_unavailable.stderr  mssql_retention_unavailable.rs  mssql_retention_unavailable.stderr  mssql_write_helper_unavailable.rs  mssql_write_helper_unavailable.stderr  multi_backend_entity_requires_backend.rs  multi_backend_entity_requires_backend.stderr  multi_backend_schema_requires_backend.rs  multi_backend_schema_requires_backend.stderr  (+70 more)
docs/: README.md  agql-auth-bridge.md  auth.md  backends.md  binary-keys-and-indexes.md  composite-mutations.md  cross-backend-tenant.md  development.md  entities-and-relations.md  error-codes.md  federation.md  getting-started.md  mssql.md  pagination-migration.md  portable-persistence.md  postgres-testing.md  postgres.md  read-projections.md  release-notes.md  repository-only-entities.md  retention-maintenance.md  runtime-and-writes.md  runtime-queries.md  runtime-records.md  runtime-relations.md  runtime-schema-ir.md  schema-management.md  schema-modules-and-leases.md  storage-streaming-range-boundary.md  strict-authorization.md
src/: lib.rs
tests/: migration_planner.rs  postgres_compat.rs  sqlite_compat.rs
