[workspace]
members = [
  "crates/graphql-orm",
  "crates/graphql-orm-macros",
]
exclude = [
  "crates/graphql-orm-macros/fixtures/full-stack",
  "crates/graphql-orm-macros/fixtures/postgres-smoke",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/Dastari/graphql-orm"

[workspace.dependencies]
async-graphql = { version = "7", features = ["dataloader", "uuid"] }
convert_case = "0.7"
futures = "0.3"
proc-macro2 = "1"
quote = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid"] }
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
tokio = { version = "1" }
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }
