[package]
name = "graphql-orm"
version = "0.4.3"
edition = "2024"
description = "Runtime support crate for graphql-orm-macros"
license = "MIT"
repository = "https://github.com/Dastari/graphql-orm"
publish = false

[package.metadata.distribution]
method = "git-full-revision"

[features]
default = ["sqlite"]
sqlite = ["graphql-orm-macros/sqlite", "dep:geo", "dep:geo-types", "dep:geojson"]
postgres = ["graphql-orm-macros/postgres"]
mssql = [
  "graphql-orm-macros/mssql",
  "dep:tiberius",
  "dep:tokio-util",
  "tokio/net",
]
change-journal = []
auth-agql = ["dep:agql-auth"]
resolver-case-pascal = ["graphql-orm-macros/resolver-case-pascal"]
resolver-case-snake = ["graphql-orm-macros/resolver-case-snake"]
resolver-case-screaming-snake = ["graphql-orm-macros/resolver-case-screaming-snake"]
resolver-case-lower = ["graphql-orm-macros/resolver-case-lower"]
resolver-case-upper = ["graphql-orm-macros/resolver-case-upper"]
argument-case-pascal = ["graphql-orm-macros/argument-case-pascal"]
argument-case-snake = ["graphql-orm-macros/argument-case-snake"]
argument-case-screaming-snake = ["graphql-orm-macros/argument-case-screaming-snake"]
argument-case-lower = ["graphql-orm-macros/argument-case-lower"]
argument-case-upper = ["graphql-orm-macros/argument-case-upper"]
field-case-pascal = ["graphql-orm-macros/field-case-pascal"]
field-case-snake = ["graphql-orm-macros/field-case-snake"]
field-case-screaming-snake = ["graphql-orm-macros/field-case-screaming-snake"]
field-case-lower = ["graphql-orm-macros/field-case-lower"]
field-case-upper = ["graphql-orm-macros/field-case-upper"]

[dependencies]
agql-auth = { git = "https://github.com/Dastari/agql-auth.git", rev = "5e7f230b96350f55496477c11f8a0505e6438779", version = "0.7.0", optional = true }
async-graphql = { version = "7", features = ["dataloader", "uuid"] }
futures = "0.3"
geo = { version = "0.33", optional = true, default-features = false }
geo-types = { version = "0.7", optional = true }
geojson = { version = "1", optional = true, default-features = true }
graphql-orm-macros = { path = "../graphql-orm-macros", version = "0.4.3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "postgres", "uuid"] }
tiberius = { workspace = true, optional = true }
tokio = { version = "1", features = ["sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { workspace = true, optional = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
trybuild = "1"
