[package]
name = "auth-service"
version = "0.1.0"
edition = "2024"

[dependencies]
agql-auth = { git = "https://github.com/Dastari/agql-auth.git", rev = "3f3b0c5365adfbe436514a681d977b600991b797", version = "0.12.0" }
async-graphql = { version = "7", features = ["dataloader", "uuid"] }
graphql-orm = { path = "../../../../", default-features = false, features = [
  "sqlite",
  "auth-agql",
  "resolver-case-pascal",
  "argument-case-pascal",
  "field-case-pascal",
] }
serde = { version = "1", features = ["derive"] }
