[package]
name = "jim-service"
version = "0.1.0"
edition = "2024"

[features]
graphql-orm-mssql-poc = ["graphql-orm/mssql"]

[dependencies]
async-graphql = { version = "7", features = ["dataloader", "uuid"] }
graphql-orm = { path = "../../../../", default-features = false, features = [
  "resolver-case-pascal",
  "argument-case-pascal",
  "field-case-pascal",
] }
serde = { version = "1", features = ["derive"] }
